--- a/src/components/status.css
+++ b/src/components/status.css
@@ -46,11 +46,6 @@
   overflow: hidden;
   margin-bottom: -8px;
 }
-.status-pre-meta .name-text {
-  display: inline-flex;
-  gap: 4px;
-  align-items: center;
-}
 .status-pre-meta > * {
   vertical-align: middle;
 }
